fixing a bug displaying the table on about page on small screens

--- a/css/style.production.css
+++ b/css/style.production.css
@@ -470,6 +470,10 @@ textarea {
   .profile__photo {
     width: 220px;
   }
+
+  .skills-table {
+    width: 100%;
+  }
 }
 
 @-webkit-keyframes color-change {
